# delta-table-compare

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup_env.ps1  setup_env.py  setup_env.sh
benchmarks/: __init__.py  bench_runner.py  databricks_benchmark.py  databricks_benchmark_notebook.py
docs/: architecture.md  architecture_contract.md  benchmarks.md  decision_log.md  interpretation_guide.md  phases.md  reconciliation_v2_reference.md  spec.md
docs/adr/: 0001-engine-parity.md  0002-polars-support-status.md  0003-failed-run-artifact-policy.md  README.md
docs/review/: code_review.md
notebooks/: run_reconciliation.py
recon/: __init__.py  config.py  descriptives.py  helpers.py  phases.py  runner.py
recon/engines/: __init__.py  base.py  polars_engine.py  spark_engine.py
tests/: conftest.py  data_generator.py  polars_data_generator.py
tests/test_recon/: _parity_helpers.py  test_config.py  test_cross_engine_parity.py  test_failure_cleanup.py  test_functional.py  test_helpers.py  test_imports.py  test_normalization_parity.py  test_null_sentinel.py  test_polars_engine.py  test_spark_multigroup.py  test_type_consistency.py
