[project]
name = "recon"
version = "0.2.0"
description = "Multi-engine data reconciliation framework for Delta Lake tables."
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0",
]

[project.optional-dependencies]
spark = [
    "pyspark[sql]>=3.5.2",
    "delta-spark==3.2.0",
]
polars = [
    "polars>=1.0",
    "deltalake>=0.18",
]
dev = [
    "pyspark[sql]>=3.5.2",
    "delta-spark==3.2.0",
    "polars>=1.0",
    "deltalake>=0.18",
    "pytest>=7.0",
    "pytest-timeout>=2.2",
]
all = [
    "recon[spark,polars,dev]",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["recon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
